--- a/ui/ags-v3/styles/_control-center.scss
+++ b/ui/ags-v3/styles/_control-center.scss
@@ -47,16 +47,16 @@ window.nc-window-2 {
 
 .cc-scale-vertical {
     trough {
-        min-width: 14px;
+        min-width: 6px;
         min-height: unset;
     }
     highlight {
-        min-width: 14px;
+        min-width: 6px;
         min-height: unset;
     }
     slider {
-        min-width: 14px;
-        min-height: 24px;
+        min-width: 20px;
+        min-height: 20px;
     }
 }
 
